testdata/language-features/guard/guard02.reject.out
type error: can not unify
[32m'String[m
with
[32m()[m

in testdata/language-features/guard/guard02.reject.lc:2:12:
  | True = ()
           ^^

------------ trace
!type error: can not unify
[32m'String[m
with
[32m()[m

in testdata/language-features/guard/guard02.reject.lc:2:12

------------ tooltips
testdata/language-features/guard/guard02.reject.lc 2:12-2:14  ()
testdata/language-features/guard/guard02.reject.lc 3:5-3:10  Bool
testdata/language-features/guard/guard02.reject.lc 3:5-3:15  String
testdata/language-features/guard/guard02.reject.lc 3:13-3:15  String
